--- a/Assignment_2_Text_Analytics_Team1.ipynb
+++ b/Assignment_2_Text_Analytics_Team1.ipynb
@@ -644,12 +644,12 @@
     "def build_nn(train_X, train_y, test_X, test_y):\n",
     "\n",
     "    # first we define the network, units is the number of neurons, in the first layer we need to tell the model the input shape\n",
-    "    neural_network = tf.keras.Sequential([\n",
-    "                        # hidden layer\n",
-    "                        tf.keras.layers.Dense(units = 100, input_shape = [train_X.shape[1]], activation = 'selu'),\n",
-    "                        # output layer - as we want probability predictions, it is important to use the sigmoid activation\n",
-    "                        tf.keras.layers.Dense(1, activation = 'sigmoid')\n",
+    "    neural_network = tf.keras.Sequential([ # initialize the recurrent neural network by initializing an object from TensorFlow’s Sequential class\n",
+    "        tf.keras.layers.InputLayer(input_shape = (train_X.shape[1]))\n",
     "    ])\n",
+    "    neural_network.add(tf.keras.layers.Dense(100, activation= 'selu')) # add a layer with the activation function selu\n",
+    "    neural_network.add(tf.keras.layers.Dropout(0.25)) # Dropout regularization to avoid overfitting \n",
+    "    neural_network.add(tf.keras.layers.Dense(1, activation = 'sigmoid')) # define one output layer \n",
     "\n",
     "    # compilation\n",
     "    neural_network.compile(loss = 'binary_crossentropy', optimizer = 'sgd',  metrics = ['accuracy', tf.keras.metrics.Recall()])\n",
