--- a/Assignment_2_Text_Analytics_Team1.ipynb
+++ b/Assignment_2_Text_Analytics_Team1.ipynb
@@ -3867,10 +3867,21 @@
     "\n",
     "In the further part, we then focused on 4 different methods that serve as the data basis for the neural networks. Although we are a team of only two students we decided to implement BOW as well as TF-IDF as the implementation of both is pretty similar. <p>\n",
     "\n",
+    "In the first step, we implemented the methods BOW, TF-IDF, LSA and Doc2Vec and created neural networks for them. \n",
+    "We found that the BOW method already performs quite well. However, it was noticeable that many values in the confusion matrices are 0. We suspected that this was due to the distribution of the labels (number of Label0 = more than 800 and Label1 = approx. 400), which is very unbalanced. \n",
+    "By upsampling the problem could be solved and a slight improvment can be observed for all 4 methods. <p>\n",
+    "Nevertheless, only the results for BOW and TF-IDF are good. It can be said that BOW and TF-IDF give very good results. The accuracy for training data is very high (BOW =99% TF-IDF=85%). \n",
+    "\n",
+    "<p>\n",
+    "\n",
+    "\n",
+    "The results for LSA and Doc2Vec, on the other hand, give poor results. It is possible that this results from the lack of semantic context recognition. \n",
+    "The size of the data could also play a role. The input data is too small to obtain a meaningful representation of the documents. \n",
+    "\n",
+    "\n",
     "\n",
     "LUKAS MARX:\n",
-    "A slight improvment can be observed\n",
-    "You can see that we make mistakes in a more balanced fashion\n",
+    "A slight improvment can be observed. You can see that we make mistakes in a more balanced fashion\n",
     "This may be beneficial, because we may fear false negatives more than false positives\n",
     "Further improvements may be possible, e.g., use hyperparameter tuning\n"
    ]
