--- a/Assignment_2_Text_Analytics_Team1.ipynb
+++ b/Assignment_2_Text_Analytics_Team1.ipynb
@@ -3867,23 +3867,22 @@
     "\n",
     "In the further part, we then focused on 4 different methods that serve as the data basis for the neural networks. Although we are a team of only two students we decided to implement BOW as well as TF-IDF as the implementation of both is pretty similar. <p>\n",
     "\n",
-    "In the first step, we implemented the methods BOW, TF-IDF, LSA and Doc2Vec and created neural networks for them. \n",
-    "We found that the BOW method already performs quite well. However, it was noticeable that many values in the confusion matrices are 0. We suspected that this was due to the distribution of the labels (number of Label0 = more than 800 and Label1 = approx. 400), which is very unbalanced. \n",
-    "By upsampling the problem could be solved and a slight improvment can be observed for all 4 methods. <p>\n",
-    "Nevertheless, only the results for BOW and TF-IDF are good. It can be said that BOW and TF-IDF give very good results. The accuracy for training data is very high (BOW =99% TF-IDF=85%). \n",
+    "After implementing the methods BOW, TF-IDF, LSA and Doc2Vec in the first step, we then created neural networks for them. \n",
+    "We found that the BOW method already performs quite well. However, it was noticeable that many values in the confusion matrices are 0. We suspected that this was due to the distribution of the labels (number of Label0 = more than 800 and Label1 = approx. 400), which is very unbalanced. As we already now, unbalanced data can lead to models which do not perform good for the remaining categories which are not over-proportionally represented. In order to solve this problem, we have two different options, namely undersampling/downsampling or oversampling/upsampling the data. Undersampling means to delete observations of the over-represented category where as oversampling means to create artificial non-existing observations for the under-represented category. In this case, we decided to use the second option as the amount of data is already not that high and with deleting data it is reduced again. So by upsampling the data we could solve the problem of unbalanced data and we recognized also a slight improvement for all four methods. <p>\n",
+    "\n",
+    "To get a better overview we also calculated and plotted the corresponding confusion matrices which contrasts the actual versus the predicted categories. In this confusion matrix the predictions are 1 if the predicted proability for class 1 is higher than 0.5. After upsampling, we found that in some cases the true positive and false negative values increased and the false positive and true negative values decreased in part, but of course this was not the case for all.\n",
     "\n",
     "<p>\n",
+    "Nevertheless, the results for BOW and TF-IDF are pretty good. It can be said that BOW and TF-IDF give very good results, as the accuracy for training data is very high (BOW = 99% TF-IDF = 85%). \n",
     "\n",
+    "<p>\n",
     "\n",
     "The results for LSA and Doc2Vec, on the other hand, give poor results. It is possible that this results from the lack of semantic context recognition. \n",
     "The size of the data could also play a role. The input data is too small to obtain a meaningful representation of the documents. \n",
     "\n",
+    "Furthermore, we have to take into account that the text was labelled by different people which may cause different results as well as possible human errors. \n",
     "\n",
-    "\n",
-    "LUKAS MARX:\n",
-    "A slight improvment can be observed. You can see that we make mistakes in a more balanced fashion\n",
-    "This may be beneficial, because we may fear false negatives more than false positives\n",
-    "Further improvements may be possible, e.g., use hyperparameter tuning\n"
+    "In addition to the upsampling of the data, which lead to a slight improvement, there are possibilities for further improvements for example to change the settings of the neural network and do some hyperparameter tuning. We tried this out ... (FELIX: genauere Details, was du gemacht hast bitte). Since this did not lead to any clearly discernible improvements we decided to stick with the previous function for building the neural network."
    ]
   }
  ],
