--- a/Assignment_2_Text_Analytics_Team1.ipynb
+++ b/Assignment_2_Text_Analytics_Team1.ipynb
@@ -3882,7 +3882,9 @@
     "\n",
     "Furthermore, we have to take into account that the text was labelled by different people which may cause different results as well as possible human errors. \n",
     "\n",
-    "In addition to the upsampling of the data, which lead to a slight improvement, there are possibilities for further improvements for example to change the settings of the neural network and do some hyperparameter tuning. We tried to use the Keras autotuner to improve some parameters such as units, activation function and a dropout option. Since this did not lead to any clearly discernible improvements we decided to stick with the previous function for building the neural network."
+    "In addition to the upsampling of the data, which lead to a slight improvement, there are possibilities for further improvements for example to change the settings of the neural network and do some hyperparameter tuning. We tried to use the Keras autotuner to improve some parameters such as units, activation function and a dropout option. Since this did not lead to any clearly discernible improvements we decided to stick with the previous function for building the neural network.\n",
+    "\n",
+    "blalbalablal"
    ]
   }
  ],
